2006-10-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/services/IqAvatarFactory.py:
	Was never actually -sending- the iq avatar response.

2006-10-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/langs/__init__.py:
	* src/main.py:
	Minor cosmetic tweaks.

	* config_example.xml:
	Added better example of saslUsername usage.

	* src/legacy/glue.py:
	Killed pointless traceback.

2006-09-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	* src/legacy/glue.py:
	Added handling of presence probes.

	* src/adhoc.py:
	Improved ad-hoc support.

	* src/main.py:
	* src/daemonize.py:
	Fixed backgrounded mode by switching to twistd.

	* src/xdb/mysql.py:
	* config_example.xml:
	Added ability to encrypt passwords.

	* src/xdb/mysql.py:
	Set charset to utf8.

	* tools/migrate.py:
	Fixed bug with lack of utils import.

	* src/xdb/mysql.py:
	Added check for easy migration between encrypted and not encrypted.

	* src/legacy/glue.py:
	Updated for version 0.8 release.

2006-09-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* src/contact.py:
	* src/config.py:
	* config_example.xml:
	Disabled pubsub/pep stuff since it's no longer valid/useful.

	* src/web/handler.py:
	* src/web/xmppcred.py:
	* src/adhoc.py:
	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/iq.py:
	* src/jabw.py:
	* src/pubsub.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	* src/main.py:
	* src/xdb/legacyaimtransport.py:
	* src/xdb/legacyjittransport.py:
	* src/xdb/xmlfiles.py:
	* src/services/VersionTeller.py:
	* src/services/VCardFactory.py:
	* src/services/Statistics.py:
	* src/services/SearchFactory.py:
	* src/services/RosterRetrieval.py:
	* src/services/LastActivity.py:
	* src/services/IqAvatarFactory.py:
	* src/services/GatewayTranslator.py:
	* src/services/EntityTime.py:
	* src/services/ConnectUsers.py:
	* src/legacy/glue.py:
	* src/legacy/buddies.py:
	* src/legacy/services/ConfirmAccount.py: